--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,8 +18,8 @@ jobs:
          java-version: 11
 
       # Gradle wrapper
-      - name: Gradle wrapper
-        run: gradle wrapper
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
         
 
         # Builds the release artifacts of the library
