--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,7 +19,7 @@ jobs:
 
         # Builds the release artifacts of the library
       - name: Release build
-        run: ./demo/gradlew :./demo/androidsdk:assembleRelease
+        run: ./demo/gradlew :demo/androidsdk:assembleRelease
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
