--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -20,12 +20,12 @@ jobs:
         # Builds the release artifacts of the library
       - name: Release build
         working-directory: ./demo
-        run: gradlew :androidsdk:assembleRelease
+        run: ./gradlew :androidsdk:assembleRelease
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
         working-directory: ./demo
-        run: gradlew publishReleasePublicationToSonatypeRepository --max-workers 1 closeAndReleaseSonatypeStagingRepository
+        run: ./gradlew publishReleasePublicationToSonatypeRepository --max-workers 1 closeAndReleaseSonatypeStagingRepository
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
