--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -20,20 +20,12 @@ jobs:
         # Builds the release artifacts of the library
       - name: Release build
         working-directory: ./demo
-        run: ./gradlew PossUsername=${{ secrets.OSSRH_USERNAME }}
-          -PossPassword=${{ secrets.OSSRH_PASSWORD }}
-          -PsigningKeyId=${{ secrets.SIGNING_KEY_ID }}
-          -PsigningKeyPassword="${{ secrets.SIGNING_PASSWORD }}"
-          -PsigningKey="${{ secrets.SIGNING_KEY }}":androidsdk:assembleRelease
+        run: ./gradlew :androidsdk:assembleRelease
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
         working-directory: ./demo
-        run: ./gradlew PossUsername=${{ secrets.OSSRH_USERNAME }}
-          -PossPassword=${{ secrets.OSSRH_PASSWORD }}
-          -PsigningKeyId=${{ secrets.SIGNING_KEY_ID }}
-          -PsigningKeyPassword="${{ secrets.SIGNING_PASSWORD }}"
-          -PsigningKey="${{ secrets.SIGNING_KEY }}" publishReleasePublicationToSonatypeRepository --max-workers 1 closeAndReleaseSonatypeStagingRepository --info
+        run: ./gradlew publishReleasePublicationToSonatypeRepository --max-workers 1 closeAndReleaseSonatypeStagingRepository --info
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
