--- a/demo/app/build.gradle
+++ b/demo/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
 
+
 android {
     compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.loginradius.demo"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
-        versionName "5.1.0"
+        versionName "5.2.0"
         multiDexEnabled true
 
     }
@@ -34,4 +35,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'com.google.firebase:firebase-analytics:21.1.0'
+
+
 }
