--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -7,8 +7,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath 'io.github.gradle-nexus:publish-plugin:1.1.0'
+        classpath 'com.google.gms:google-services:4.4.1'
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
