--- a/sdk/androidsdk/build.gradle
+++ b/sdk/androidsdk/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.library'
 
+
 ext {
     PUBLISH_GROUP_ID = "com.loginradius.androidsdk"
     PUBLISH_ARTIFACT_ID = 'androidsdk'
-    PUBLISH_VERSION = "5.1.0"
+    PUBLISH_VERSION = "5.2.0"
 }
 
-if(project.file("${rootDir}/scripts/publish-module.gradle").exists()){
+if (project.file("${rootDir}/scripts/publish-module.gradle").exists()) {
     apply from: "${rootDir}/scripts/publish-module.gradle"
 }
 
@@ -15,10 +16,10 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
-        versionName "5.1.0"
+        versionName "5.2.0"
         multiDexEnabled true
 
     }
@@ -26,13 +27,13 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
-            useProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //useProguard false
+           // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
             minifyEnabled false
-            useProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            //useProguard false
+            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     compileOptions {
@@ -45,6 +46,9 @@ android {
             google()
             maven { url 'https://maven.google.com' }
             jcenter()
+        }
+        dependencies {
+            classpath 'com.google.gms:google-services:4.3.10'
         }
     }
 
@@ -62,4 +66,9 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'androidx.biometric:biometric:1.1.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'com.google.zxing:core:3.4.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
+
 }
